# rust-project-template

./: .gitignore  Cargo.toml  README.md
examples/: c01-simple.rs
src/: error.rs  lib.rs  main.rs  utils.rs
