[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Async
# tokio = { version = "1", features = ["full"] }

# -- Json
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# serde_with = { version = "3", features = ["macros"] }

# -- Others
derive_more = {version = "2", features = ["from", "display"] }
